--- a/src/main/webapp/formulaire.html
+++ b/src/main/webapp/formulaire.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-    <form name="formulaire" method="get">
+    <form name="formulaire" method="get" action="ServletTraitement">
         <label for="nom"><b>Nom: </b></label>
         <input id="nom" type="text" name="nom">
         <label for="prenom"><b>Prenom:</b></label>
