qst6: add radio for h/f

--- a/src/main/webapp/formulaire.html
+++ b/src/main/webapp/formulaire.html
@@ -10,6 +10,14 @@
         <input id="nom" type="text" name="nom">
         <label for="prenom"><b>Prenom:</b></label>
         <input id="prenom" type="text" name="prenom">
+
+
+        <p>Please select your sex (H/F)</p>
+            <input type="radio" id="h" name="home" value="H">
+            <label for="h">H</label><br>
+            <input type="radio" id="f" name="female" value="F">
+            <label for="f">F</label><br><br>
+
         <button type="submit">Envoyer</button>
     </form>
 </body>
