--- a/src/main/webapp/formulaire.html
+++ b/src/main/webapp/formulaire.html
@@ -13,9 +13,9 @@
 
 
         <p>Please select your sex (H/F)</p>
-            <input type="radio" id="h" name="home" value="H">
+            <input type="radio" id="h" name="sex" value="Monsieur">
             <label for="h">H</label><br>
-            <input type="radio" id="f" name="female" value="F">
+            <input type="radio" id="f" name="sex" value="Madame">
             <label for="f">F</label><br><br>
 
         <button type="submit">Envoyer</button>
