--- a/src/main/webapp/formulaire.html
+++ b/src/main/webapp/formulaire.html
@@ -18,6 +18,16 @@
             <input type="radio" id="f" name="sex" value="Madame">
             <label for="f">F</label><br><br>
 
+
+        <label for="func">Please select your function</label>
+        <select name="function" id="func">
+            <option value="Etudient">Etudient</option>
+            <option value="Ingenieur">Ingenieur</option>
+            <option value="Enseignet">Enseignet</option>
+            <option value="Retraite">Retraite</option>
+            <option value="Autre">Autre</option>
+        </select>
+
         <button type="submit">Envoyer</button>
     </form>
 </body>
