--- a/src/main/webapp/formulaire.html
+++ b/src/main/webapp/formulaire.html
@@ -20,7 +20,7 @@
 
 
         <label for="func">Please select your function</label>
-        <select name="function" id="func">
+        <select name="fonction" id="func">
             <option value="Etudient">Etudient</option>
             <option value="Ingenieur">Ingenieur</option>
             <option value="Enseignet">Enseignet</option>
