--- a/src/main/webapp/formulaire.html
+++ b/src/main/webapp/formulaire.html
@@ -12,14 +12,14 @@
         <input id="prenom" type="text" name="prenom">
 
 
-        <p>Please select your sex (H/F)</p>
+        <h2>Please select your sex (H/F)</h2>
             <input type="radio" id="h" name="sex" value="Monsieur">
             <label for="h">H</label><br>
             <input type="radio" id="f" name="sex" value="Madame">
             <label for="f">F</label><br><br>
 
 
-        <label for="func">Please select your function</label>
+        <label for="func"><h2>Please select your function</h2></label>
         <select name="fonction" id="func">
             <option value="Etudient">Etudient</option>
             <option value="Ingenieur">Ingenieur</option>
@@ -27,6 +27,16 @@
             <option value="Retraite">Retraite</option>
             <option value="Autre">Autre</option>
         </select>
+
+        <h2>Please select your hobbies</h2>
+        <input type="checkbox" id="h1" name="hob1" value="Swimming">
+        <label for="h1">Swimming</label><br>
+        <input type="checkbox" id="h2" name="hob2" value="Cycling">
+        <label for="h2">Cycling</label><br>
+        <input type="checkbox" id="h3" name="hob3" value="Photography">
+        <label for="h3">Photography</label><br>
+        <input type="checkbox" id="h4" name="hob4" value="Reading historical novels">
+        <label for="h4">Reading historical novels</label><br><br>
 
         <button type="submit">Envoyer</button>
     </form>
