--- a/src/main/webapp/formulaire.html
+++ b/src/main/webapp/formulaire.html
@@ -29,13 +29,13 @@
         </select>
 
         <h2>Please select your hobbies</h2>
-        <input type="checkbox" id="h1" name="hob1" value="Swimming">
+        <input type="checkbox" id="h1" name="hob" value="Swimming">
         <label for="h1">Swimming</label><br>
-        <input type="checkbox" id="h2" name="hob2" value="Cycling">
+        <input type="checkbox" id="h2" name="hob" value="Cycling">
         <label for="h2">Cycling</label><br>
-        <input type="checkbox" id="h3" name="hob3" value="Photography">
+        <input type="checkbox" id="h3" name="hob" value="Photography">
         <label for="h3">Photography</label><br>
-        <input type="checkbox" id="h4" name="hob4" value="Reading historical novels">
+        <input type="checkbox" id="h4" name="hob" value="Reading historical novels">
         <label for="h4">Reading historical novels</label><br><br>
 
         <button type="submit">Envoyer</button>
